@@ -505,7 +505,7 @@ library('NMF')
 laml.sign = estimateSignatures(mat = laml.tnm, nTry = 6)
 ```
 
-```{r, fig.height=3, fig.width=3, eval=TRUE, message=TRUE, echo=FALSE}
+```{r, fig.height=3, fig.width=3, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE}
 #Run main function with maximum 6 signatures. 
 library('NMF')
 laml.sign = estimateSignatures(mat = laml.tnm, nTry = 6, pConstant = 0.1, plotBestFitRes = FALSE)
