@@ -1,11 +1,12 @@
 CHANGES IN VERSION 2.2.20
 -------------------------
 BUG FIX
-    o plotMafSummary with single sample Issue: #449
     o Duplicated color code Issue: #452
     o oncoplot with exprsTbl leads to wrong alignment Issue: #451
+    o plotMafSummary with single sample Issue: #449
 
 ENHANCEMENTS
+    o Pairwise t-test and muttaional load in `tcgaCompare` Issue: #453
     o Added `titleText` argument to `oncoplot` Issue: #448
     o Highlight mutated genes on gisticChromplot Issue: #443
 
